[package]
name = "warpainter"
version = "0.1.0"
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

[profile.release]
debug = true
incremental = true
lto = "off"

[profile.dev]
opt-level = 1
debug = true
incremental = true
lto = "off"

[dependencies]
wgpu = "^22.1.0"
eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow"] }
image = "0.24.3"
lazy_static = "1.4"
byte-slice-cast = "1.2.1"
crossbeam = "0.8.2"
bincode = "2.0.0-rc.3"
snap = "1.1.0"
base64 = "0.21.0"
ouroboros = "0.15.6"
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.0"
poll-promise = { version = "0.3.0", features = ["web"] }
rayon = "1.10.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.4.1"

[dependencies.rfd]
version = "0.10"
default-features = false
features = [
    "xdg-portal",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mlua = { version = "0.8.8", features = ["luajit", "vendored", "send"] }
arboard = "3.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "^0.4"
wasm-bindgen = "^0.2.84"
wasm_thread = "^0.2.0"
web-sys = { version = "^0.3.73", features = [
    "Window",
    "Document",
    "HtmlElement",
    "CssStyleDeclaration",
    "Url",
    "Element",
    "Node",
    "EventTarget",
    "Event",
    "InputEvent",
    "console",
] }
