[package]
name = "warpainter"
version = "0.1.0"
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

[lib]
name = "libwarpainter"
crate-type=["lib", "cdylib"]
path = "src/lib.rs"

[[bin]]
name = "warpainter"
path = "src/main.rs"

[package.metadata.android]
apk_name = "warpainter"
shared_user_id = "moe.wareya"
package = "moe.wareya.warpainter"
assets = "src/data2/"

[package.metadata.android.application]
debuggable = true

[package.metadata.android.sdk]
min_sdk_version = 30
target_sdk_version = 35
max_sdk_version = 36

[profile.release]
debug = "line-tables-only"
incremental = true
lto = "off"
overflow-checks = false
strip = true

[profile.bench]
overflow-checks = false

[profile.test]
overflow-checks = false

[profile.dev]
opt-level = 1
debug = "line-tables-only"
incremental = true
lto = "off"
overflow-checks = false

[dependencies]
image = "0.24.3"
lazy_static = "1.4"
byte-slice-cast = "1.2.1"
crossbeam = "0.8.2"
bincode = "2.0.0-rc.3"
snap = "1.1.0"
base64 = "0.21.0"
ouroboros = "0.15.6"
getrandom = { version = "0.2.11", features = ["js"] }
rand = "0.8.0"
rayon = "1.10.0"
libflate = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2.2"
flate2 = "1.1.1"
cbor4ii = { version = "1.0.0", features = ["serde1", "use_std"] }
serde_bytes = "0.11.17"
web-time = "1.1.0"
lz4_flex = "0.11.3"
zip = { version = "2.6.1", default-features = false, features = [ "deflate", "deflate-flate2"] }
xot = "0.31.2"
png = "0.17.16"
glow = "0.16.0"

[dependencies.uuid]
version = "=1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit = { version = "0.30.10", default-features = false, features = ["rwh_06"] }
atomicwrites = "0.4.4"
lz4 = "1.28.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
glutin = { version = "0.32" }

[target.'cfg(target_os = "android")'.dependencies]
libc = { version = "0.2", default-features = false }
ndk-sys = "0.6.0"
android-activity = "0.6.0"
jni = { git = "https://github.com/jni-rs/jni-rs", rev = "40d5ec1a36dbe63dfbfb99d47a7f3364f3674b3c" }

#eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "android-native-activity"] }
eframe = { git = "https://github.com/emilk/egui.git", rev="6c922f72a819e6083ffc4b6a452c2493c9170e63", default-features = false, features = ["default_fonts", "glow", "android-native-activity"] }

egui-winit = { version = "0.31.1" }
poll-promise = { version = "0.3.0" }

[target.'cfg(target_os = "linux")'.dependencies]

#eframe = { version = "0.31.1", default-features = false, features = ["x11", "wayland", "default_fonts", "glow", "accesskit"] }
eframe = { git = "https://github.com/emilk/egui.git", rev="6c922f72a819e6083ffc4b6a452c2493c9170e63", default-features = false, features = ["x11", "wayland", "default_fonts", "glow", "accesskit"] }

poll-promise = { version = "0.3.0", features = ["web"] }

[target.'cfg(all(not(target_os = "linux"), not(target_os = "android")))'.dependencies]

#eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "accesskit", "web_screen_reader"] }
eframe = { git = "https://github.com/emilk/egui.git", rev="6c922f72a819e6083ffc4b6a452c2493c9170e63", default-features = false, features = ["default_fonts", "glow", "accesskit", "web_screen_reader"] }

poll-promise = { version = "0.3.0", features = ["web"] }

[target.'cfg(not(target_os = "android"))'.dependencies.rfd]
version = "0.15"
default-features = false
features = [
    "async-std", "xdg-portal",
]

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
arboard = "3.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.77"
tracing-wasm = "0.2"
wasm-bindgen-futures = "^0.4"
wasm-bindgen = "^0.2.84"
wasm_thread = "^0.2.0"
web-sys = { version = "^0.3.73", features = [
    "Window",
    "Document",
    "HtmlElement",
    "CssStyleDeclaration",
    "Url",
    "Element",
    "Node",
    "EventTarget",
    "Event",
    "InputEvent",
    "console",
] }
